# Telegram_converter_bot

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml
currency_bot/: Dockerfile
currency_bot/.github/wokflows/: ci.yml
currency_bot/src/: CurrencyConverter.cpp
include/: BotHandler.h  CurrencyConverter.h
src/: BotHandler.cpp  main.cpp
